add img va lienhe.html

--- a/index.html
+++ b/index.html
@@ -10,37 +10,30 @@
 <body>
     <div class="app">
 
-        <header id="header"></header>
-        <main class="">
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
-            <h5>Hello World!</h5>
+        <header id="header" >
+        </header>
+        <main class="main">
+            <div class="banner_header">
+                
+            </div>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
+            <h5>hello world</h5>
         </main>
 
         <footer id="footer"></footer>
