--- a/index.html
+++ b/index.html
@@ -10,35 +10,16 @@
 <body>
     <div class="app">
 
-        <header id="header" >
-        </header>
-        <main class="main">
-            <div class="banner_header">
-                
-            </div>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
-            <h5>hello world</h5>
+        <header id="header"></header>
+        <div id="myCarousel"></div>
+        <main class="container">
+           
         </main>
 
         <footer id="footer"></footer>
 
     </div>
     <script src="./js/index.js" type="module"></script>
+    <script src="./js/dssanpham.js" type="module"></script>
 </body>
 </html>
