--- a/html/lienhe.html
+++ b/html/lienhe.html
@@ -27,7 +27,7 @@
                             <input type="text" id="hoten">
                         </div>
                         <div class="item2">
-                            <label for="email">Email</label>
+                            <label for="email">Email</label> <br>
                             <input type="text" name="" id="email">
                         </div>
                     </div>
