--- a/html/loginform.html
+++ b/html/loginform.html
@@ -61,6 +61,9 @@
             margin-top: 20px;
 
         }
+        button:hover{
+            opacity: .9;
+        }
         .right button{
             width: 350px;
             height: 50px;
@@ -121,7 +124,7 @@
                 </div>
                 <div class="btn_login">
                     <button>Login</button> <br>
-                    <a href="">Đăng ký</a>
+                    <a href="/html/dangKi.html">Đăng ký</a>
                 </div>
                 
             </div>
