--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <header id="header"></header>
         <div id="myCarousel"></div>
         <main class="container">
-           
+            <div id="products">
+               
+            </div>
         </main>
 
         <footer id="footer"></footer>
 
     </div>
-    <script src="./js/index.js" type="module"></script>
-    <script src="./js/dssanpham.js" type="module"></script>
+    <script src="/js/index.js" type="module"></script>
 </body>
 </html>
