--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <footer id="footer"></footer>
 
     </div>
+
+    <script>
+        function showDetail(objSanPham){
+            
+            localStorage.clear();
+            localStorage.setItem("sanpham",objSanPham);
+        }
+    </script>
     <script src="/js/index.js" type="module"></script>
+
 </body>
 </html>
