--- a/html/chitietsanpham.html
+++ b/html/chitietsanpham.html
@@ -18,7 +18,7 @@
                 <div class="item-img col-6">
                     <div class="row">
                         <div class="col-12">
-                            <img style="width: 50%;" src="" id="main-image"
+                            <img  src="" id="main-image"
                                 class="d-block mx-auto" />
                         </div>
                     </div>
