--- a/html/dieukhoansudung.html
+++ b/html/dieukhoansudung.html
@@ -7,26 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Điều khoản sử dụng</title>
     <link rel="stylesheet" href="/css/index.css">
-    <style>
-        *{
-            margin: 0 ;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        p, h2{
-            margin: 20px;
-        }
-        div{
-            display: block;
-            margin: 0 auto;
-            width: 80%;
-        }
-    </style>
+  
+       
 </head>
 
 <body>
     <header id="header"></header>
-    <div class="center">
+    <div class="container" style="padding-bottom: 20px; margin-top: 20px;">
         <h2>Điều khoản sử dụng</h2>
         <p>
             Khi Quý Khách Hàng truy cập vào trang web của chúng tồi có nghĩa là Quy Khách Hàng đồng ý với các điều khoản
