--- a/html/huongdanmuahangvathanhtoan.html
+++ b/html/huongdanmuahangvathanhtoan.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="/css/index.css">
     <style>
 
-
         img {
             width: 70%;
             display: block;
@@ -19,11 +18,18 @@
         p {
             margin: 20px 20px;
             font-family: Arial, Helvetica, sans-serif;
+            font-size: 18px;
         }
-
+        a{
+            text-decoration: none;
+            color: black;
+        }
+        a:hover{
+            color: rgb(68, 67, 67);
+        }
         .container{
-            width: 80%;
-            margin: 0 auto;
+            margin-top: 20px;
+            margin-bottom: 20px;
             box-shadow: 0 0 1px #000;
         }
     </style>
@@ -32,7 +38,7 @@
 <body>
     <header id="header"></header>
     <div class="container">
-        <h1>Hướng dẫn mua hàng và thanh toán:</h1>
+        <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; padding-top: 20px; ">Hướng dẫn mua hàng và thanh toán:</h1>
         <p> Truy cập vào website <a href="">http://DinhKien_HoangKhang</a> theo các bước sau</p>
         <div class="Step1">
             <p><b>Bước 1:</b> Truy cập vào sản phẩm cần mua để mua hàng</p>
@@ -57,7 +63,7 @@
             <p>3.2. Nếu Quý Khách Hàng muốn mua hàng mà không cần tài khoản, vui lòng cung cấp thông tin mua hàng, địa
                 chỉ giao hàng, lựa chọn hình thức thanh toán để thực hiện đơn hàng của mình.</p>
         </div>
-        <div class="Step4">
+        <div class="Step4" style="padding-bottom: 20px;">
             <p><b>Bước 4:</b>Sau khi nhận được đơn hàng, Parfumerie sẽ gửi xác nhận đơn hàng qua điạ chỉ email mà Quý
                 khách hàng đã cung cấp và/hoặc liên hệ bằng cách gọi điện lại để xác nhận lại đơn hàng và địa chỉ của
                 Quý Khách Hàng.</p>
