--- a/index.html
+++ b/index.html
@@ -8,19 +8,42 @@
 
 </head>
 <body>
-    <div class="app">
-
         <header id="header"></header>
         <div id="myCarousel"></div>
         <main class="container">
             <div id="products">
                
             </div>
+
+            <div class="owl-stage">
+                <h3 class="owl-title">Thông tin</h3>
+                <div class="owl-items">
+                    <div class="owl-item" style="margin-left: 10px;">
+                        <img src="/img/nuoc-hoa-dung-duoc-cho-ca-nam-va-nu.png" alt="">
+                        <h4>5 mùi nước hoa dùng được cho cả nam và nữ mà bạn không nên bỏ qua</h4>
+                        <p>Bạn có biết? Mùi nước hoa chính là điểm cuốn hút và ghi đậm dấu ấn với mọi người...</p>
+                    </div>
+                    <div class="owl-item">
+                        <img src="/img/nuoc-hoa-thom-lau-cho-nam.png" alt="">
+                        <h4>5 chai nước hoa thơm lâu mà nam giới không nên bỏ qua</h4>
+                        <p>Đâu là mùi nước hoa thơm lâu cho nam giới? Đây là câu hỏi mà hầu hết nam giới đều quan tâm...</p>
+                    </div>
+                    <div class="owl-item">
+                        <img src="/img/nuoc-hoa-huong-thom-da-thit-parfumerievn.jpg" alt="">
+                        <h4>Hương thơm da thịt, xu hướng mùi hương đang được yêu thích</h4>
+                        <p>Sở dĩ có tên mùi hương da thịt vì hương thơm của những chai nước hoa này có mùi vô cùng nhẹ nhàng...</p>
+                    </div>
+                    <div class="owl-item">
+                        <img src="/img/nuoc-hoa-nam-dior-sauvage-edt-parfumerievn.jpg" alt="">
+                        <h4>Để nắm bắt nữa kia, nàng thường chọn Dior sauvage EDT</h4>
+                        <p>Thấu hiểu và nắm bắt tâm lý phái mạnh, các nàng thường chọn Dior sauvage EDT như một món quà...</p>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <footer id="footer"></footer>
 
-    </div>
     <script src="/js/index.js" type="module">
     </script>
     <script>
