Chinh sua css gioithieu.html

--- a/html/gioithieu.html
+++ b/html/gioithieu.html
@@ -8,6 +8,13 @@
     <title>Giới thiệu</title>
     
     <link rel="stylesheet" href="/css/index.css">
+    <style>
+        .container{
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -19,23 +26,23 @@
                     <div class="border-bg clearfix padding-bottom-20">
                         <div class="col-md-12">
                             <div class="page-title category-title">
-                                <h1 class="title-head"><a href="#">TRẢI NGHIỆM NHỮNG CẢM XÚC MÙI HƯƠNG ĐẦY THI VỊ CÙNG
-                                        PARFUMERIE.VN</a></h1>
+                                <h1 class="title-head"><a href="#" style="text-decoration: none; color: black;">TRẢI NGHIỆM NHỮNG CẢM XÚC MÙI HƯƠNG ĐẦY THI VỊ CÙNG
+                                        DoubleKParfume.VN</a></h1>
                             </div>
                             <div class="content-page rte">
                                 <p style="text-align: justify;"><span style="font-size:16px;"><span
                                             style="font-family:Tahoma,Geneva,sans-serif;">Hơn cả thơm &amp; đẹp, nước
-                                            hoa chính là cá tính và dấu ấn của mỗi người.&nbsp;Hãy chọn Parfumerie -
+                                            hoa chính là cá tính và dấu ấn của mỗi người.&nbsp;Hãy chọn DoubleKParfume -
                                             chọn lấy những mùi hương nâng niu cảm xúc tự do, mạnh mẽ và cả những yêu
                                             thương từ trái tim mình bạn nhé! Hương thơm sẽ luôn để lại những ký ức thi
                                             vị trong ta...</span></span></p>
                                 <p style="text-align: center;"><span style="font-size:16px;"><span
                                             style="font-family:Tahoma,Geneva,sans-serif;"><img data-thumb="grande"
                                                 original-height="1280" original-width="960"
-                                                src="../img/gioiThieu/img1.webp"></span></span>
+                                                src="/img/banner_gioiThieu.jpg"></span></span>
                                 </p>
                                 <p style="text-align: center;"><span style="font-size:14px;"><span
-                                            style="font-family:Tahoma,Geneva,sans-serif;">Có một PARFUMERIE rất đời mà
+                                            style="font-family:Tahoma,Geneva,sans-serif;">Có một DoubkeKParfume rất đời mà
                                             cũng rất thơ giữa lòng Sài Gòn</span></span></p>
                                 <h2 style="text-align: justify;"><span style="font-size:16px;"><span
                                             style="font-family:Tahoma,Geneva,sans-serif;"><strong>Có một Parfumerie rất
