khoi tao project Web nuoc hoa

--- a/html/dangKi.html
+++ b/html/dangKi.html
@@ -8,8 +8,8 @@
     <title>Đăng ký</title>
     
     <script src="../lib/bootstrap-5.3.0-alpha1/dist/js/jquery-3.6.4.min.js"></script>
-    <link rel="stylesheet" href="../lib/fontawesome-free-6.3.0-web/css/all.min.css">
-    <link rel="stylesheet" href="/css/index.css">
+    
+    <link rel="stylesheet" href="../css/index.css">
     <style>
         /* Định dạng các phần tử trong form */
         form {
@@ -204,7 +204,7 @@
 
     </div>
     <footer id="footer"></footer>
-    <script src="/js/index.js" type="module"></script>
+    <script src="../js/index.js" type="module"></script>
     <script>
 
         // Lấy các phần tử cần thiết từ DOM
