--- a/html/gioithieu.html
+++ b/html/gioithieu.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giới thiệu</title>
     
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <style>
         .container{
             margin-top: 20px;
@@ -39,7 +39,7 @@
                                 <p style="text-align: center;"><span style="font-size:16px;"><span
                                             style="font-family:Tahoma,Geneva,sans-serif;"><img data-thumb="grande"
                                                 original-height="1280" original-width="960"
-                                                src="/img/banner_gioiThieu.jpg"></span></span>
+                                                src="../img/banner_gioiThieu.jpg"></span></span>
                                 </p>
                                 <p style="text-align: center;"><span style="font-size:14px;"><span
                                             style="font-family:Tahoma,Geneva,sans-serif;">Có một DoubkeKParfume rất đời mà
@@ -113,7 +113,7 @@
         </div>
     </section>
     <footer id="footer"></footer>
-    <script src="/js/index.js" type="module"></script>
+    <script src="../js/index.js" type="module"></script>
 </body>
 
 </html>
