--- a/html/kienthuc.html
+++ b/html/kienthuc.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kiến thức</title>
-	<link rel="stylesheet" href="/css/index.css">
+	<link rel="stylesheet" href="../css/index.css">
 	<style>
 		.col-3 {
 			width: 25%;
@@ -215,7 +215,7 @@
 		</div>
 	</div>
 	<footer id="footer"></footer>
-	<script src="/js/index.js" type="module"></script>
+	<script src="../js/index.js" type="module"></script>
 	<script>
 		const dropdownToggle = document.querySelector('.dropdown-toggle');
 		const dropdownMenu = document.querySelector('.dropdown-menu');
