--- a/html/chitietsanpham.html
+++ b/html/chitietsanpham.html
@@ -98,7 +98,7 @@
                     <div class="row">
                         <div class="d-flex justify-content-center mt-4">
                             <button class="btn btn-buy mx-2">Mua ngay</button>
-                            <button class="btn btn-cart mx-2">Thêm vào giỏ hàng <i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="btn btn-cart mx-2" onclick=addToCart()>Thêm vào giỏ hàng <i class="fa-solid fa-cart-plus"></i></button>
                         </div>
     
                     </div>
@@ -356,6 +356,8 @@
     <footer id="footer"></footer>
     <script src="/js/index.js" type="module"></script>
     <script src="/js/chiTietSanPham.js"></script>
+  
+    
 </body>
 
 </html>
