--- a/html/dieukhoansudung.html
+++ b/html/dieukhoansudung.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Điều khoản sử dụng</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
   
        
 </head>
@@ -119,7 +119,7 @@
             chính sách đổi trả hàng)</p>
     </div>
     <footer id="footer"></footer>
-    <script src="/js/index.js" type="module"></script>
+    <script src="../js/index.js" type="module"></script>
 </body>
 
 </html>
