--- a/html/lienhe.html
+++ b/html/lienhe.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liên Hệ</title>
-    <link rel="stylesheet" href="/css/lienhe.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="../css/lienhe.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <header id="header"></header>
@@ -42,6 +42,6 @@
         </div>
     </main>
     <footer id="footer"></footer>
-    <script src="/js/index.js" type="module"></script>
+    <script src="../js/index.js" type="module"></script>
 </body>
 </html>
