--- a/html/loginform.html
+++ b/html/loginform.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <style>
         .formlogin{
             font-family: Arial, Helvetica, sans-serif;
@@ -124,13 +124,13 @@
                 </div>
                 <div class="btn_login">
                     <button>Login</button> <br>
-                    <a href="/html/dangKi.html">Đăng ký</a>
+                    <a href="../html/dangKi.html">Đăng ký</a>
                 </div>
                 
             </div>
         </div>
     </div>
     <footer id="footer"></footer>
-    <script src="/js/index.js" type="module"></script>
+    <script src="../js/index.js" type="module"></script>
 </body>
 </html>
