--- a/html/chitietsanpham.html
+++ b/html/chitietsanpham.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chi tiết sản phẩm</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
 
 </head>
 
@@ -354,8 +354,8 @@
         
     </div>
     <footer id="footer"></footer>
-    <script src="/js/index.js" type="module"></script>
-    <script src="/js/chiTietSanPham.js"></script>
+    <script src="../js/index.js" type="module"></script>
+    <script src="../js/chiTietSanPham.js"></script>
   
     
 </body>
