--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
         <footer id="footer"></footer>
     <script src="./js/banner.js"></script>
     
-    <script src="./js/index.js" type="module">
-        
-    </script>
+    <script src="./lib/bootstrap-5.3.0-alpha1/dist/js/jquery-3.6.4.min.js"></script>
+    <script src="./lib/bootstrap-5.3.0-alpha1/dist/js/bootstrap.bundle.js"></script>
     <script src="./js/rendersanpham.js" type="module"></script>
     <script>
         function showDetail(objSanPham){
