--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
         <footer id="footer"></footer>
     <script src="./js/banner.js"></script>
-    
+    <script src="./js/headerIndex.js"></script>
+    <script src="./js/footerIndex.js"></script>
     <script src="./lib/bootstrap-5.3.0-alpha1/dist/js/jquery-3.6.4.min.js"></script>
     <script src="./lib/bootstrap-5.3.0-alpha1/dist/js/bootstrap.bundle.js"></script>
     <script src="./js/rendersanpham.js" type="module"></script>
